# SCEngine

./: .gitignore  CMakeLists.txt  README.md
DemoGames/EmptyProject/: CMakeLists.txt  README.md
Dependency/imgui/: CMakeLists.txt
SCEngine/: CMakeLists.txt  Camera.hpp  DebugDraw.hpp  SCEngine.cpp  SCEngine.h  Shader.hpp  main.cpp  shader.vs
SCEngine/common/: Collider.hpp  RectangleCollider.cpp  RectangleCollider.h  RectangleCollider.hpp  RectangleRender.cpp  RectangleRender.h  RectangleRender.hpp  RigidBody.cpp  RigidBody.h  RigidBody.hpp  ShapeRender.hpp
SCEngine/core/: Camera.cpp  Camera.h  Camera.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  GameWorld.cpp  GameWorld.h  GameWorld.hpp  Input.cpp  Input.h  Input.hpp  Script.cpp  Script.h  Script.hpp  Transform.cpp  Transform.h  Transform.hpp
SCEngine/editor/: DebugDraw.h  DeugDraw.cpp  EditorCameraController.cpp  EditorCameraController.h  GameWorldEditor.cpp  GameWorldEditor.h  PhysicsDeugDraw.cpp  SubWindow.cpp  SubWindow.h
SCEngine/graphics/: RectangleRender.cpp
SCEngine/imgui_backends/: imgui_impl_glfw.cpp
SCEngine/input/: Input.cpp  Input.h
SCEngine/physics/: PhysicsWorld.cpp  PhysicsWorld.h  RectangleCollider.cpp  RectangleCollider.h  RigidBody.cpp  RigidBody.h
SCEngine/shaders/: shader.vs  shaderPoints.vs  shaderTriangles.vs
SCEngine/utility/: Shader.h  StaticBlock.h  Window.cpp  Window.h
SCEngineCommon/: CMakeLists.txt
SCEngineCommon/common/: CallbackPointer.h  GenerateOpenGLPointer.py  OpenGLPointer.h  Platform.cpp  Platform.h
SCEngineCommon/data/: GameObjectData.h  GameWorldData.h  Limit.h  SceneData.h  ScriptData.h
SCEngineCommon/graphics/: VulkanManager.cpp  VulkanManager.h
SCEngineCommon/input/: InputConstants.h
SCEngineCommon/sc/common/: CallbackPointer.h  IEngine.h  Platform.h
SCEngineCommon/sc/data/: GameObjectData.h  Limit.h  SceneData.h  ScriptData.h
SCEngineCommon/sc/graphics/: VulkanManager.cpp  VulkanManager.h
SCEngineCommon/sc/input/: InputConstants.h
SCEngineCore/: CMakeLists.txt  SCEngine.cpp  SCEngine.h
SCEngineCore/asset/: AssetManager.h
SCEngineCore/asset/SCEngineAsset/shader/: vertShader_pvm_pos2d_opaqueColor.spv
SCEngineCore/core/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  Scene.cpp  Scene.h  Script.cpp  Script.h  Transform2D.cpp  Transform2D.h
SCEngineCore/editor/: DebugDrawPhysics2D.cpp  DebugDrawPhysics2D.h  EditorCameraController.cpp  EditorCameraController.h  PhysicsDebugDraw.h  UnknownScript.h
SCEngineCore/graphics/: DrawData.h  RectangleRender.cpp  RectangleRender.h
SCEngineCore/input/: Input.cpp  Input.h
SCEngineCore/physics/: Collider.h  PhysicsWorld.cpp  PhysicsWorld.h  RectangleCollider.cpp  RigidBody.cpp
SCEngineCore/physics2d/: Collider2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RectangleCollider2D.cpp  RectangleCollider2D.h  RigidBody2D.cpp  RigidBody2D.h
SCEngineCore/renderer2d/: RectangleRenderer2D.cpp  RectangleRenderer2D.h
SCEngineCore/sc/asset/: AssetManager.h
SCEngineCore/sc/asset/SCEngineAssets/Shaders/: vertShader_pvm_pos2d_color.spv  vertShader_pvm_pos2d_color.vert  vertShader_pvm_pos2d_color_size.spv  vertShader_pvm_pos2d_color_size.vert
SCEngineCore/sc/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Script.cpp  Script.h  Transform2D.cpp  Transform2D.h
SCEngineCore/sc/editor/: DebugDrawPhysics2D.cpp  DebugDrawPhysics2D.h  EditorCameraController.cpp  EditorCameraController.h  UnknownScript.h
SCEngineCore/sc/input/: Input.cpp  Input.h  InputManager.cpp  InputManager.h
SCEngineCore/sc/physics2d/: Collider2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RectangleCollider2D.cpp  RectangleCollider2D.h  RigidBody2D.cpp  RigidBody2D.h
SCEngineCore/sc/renderer2d/: RectangleRenderer2D.cpp  RectangleRenderer2D.h
SCEngineCore/sc/utility/: Asset.cpp  StaticBlock.h  Window.cpp  Window.h
SCEngineCore/shaders/: shader.fs
SCEngineCore/utility/: Asset.cpp  Asset.h  Shader.h  StaticBlock.h  Window.cpp
SCEngineEditor/: CMakeLists.txt  SCEngineEditor.h  main.cpp
SCEngineEditor/compiler/cmake-3.25.0-rc1-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
SCEngineEditor/compiler/cmake-3.25.0-rc1-windows-x86_64/doc/cmake/html/_static/: documentation_options.js
SCEngineEditor/compiler/cmake-3.25.0-rc1-windows-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  (+93 more)
SCEngineEditor/compiler/cmake-3.25.0-rc1-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
SCEngineEditor/compiler/cmake-3.25.0-rc1-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
SCEngineEditor/editor/: GameWorldEditor.cpp  GameWorldEditor.h  SceneEditor.cpp  SceneEditor.h  SubWindow.cpp  SubWindow.h
SCEngineEditor/imgui_backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
SCEngineEditor/platform/: PlatformImpl.cpp  PlatformImpl.h
SCEngineEditor/sc_editor/: SceneEditor.cpp  SceneEditor.h  SubWindow.cpp  SubWindow.h
(+1791 files in other folders)
